--- a/Project1VS/manifest/package.xml
+++ b/Project1VS/manifest/package.xml
@@ -68,5 +68,13 @@
 		<members>*</members>
 		<name>Workflow</name>
 	</types>
+	<types>
+		<members>*</members>
+		<name>RecordType</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ValidationRule</name>
+	</types>
 	<version>51.0</version>
 </Package>
