--- a/Project1VS/manifest/package.xml
+++ b/Project1VS/manifest/package.xml
@@ -38,6 +38,14 @@
 	</types>
 	<types>
 		<members>*</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CustomField</name>
+	</types>
+	<types>
+		<members>*</members>
 		<name>EscalationRule</name>
 	</types>
 	<types>
