how many times do I have to teach you this lesson old man

--- a/Project1VS/manifest/package.xml
+++ b/Project1VS/manifest/package.xml
@@ -22,10 +22,6 @@
 	</types>
 	<types>
 		<members>*</members>
-		<name>ApprovalProcess</name>
-	</types>
-	<types>
-		<members>*</members>
 		<name>AssignmentRule</name>
 	</types>
 	<types>
@@ -42,11 +38,15 @@
 	</types>
 	<types>
 		<members>*</members>
-		<name>EscalationRule</name>
+		<name>CustomObject</name>
 	</types>
 	<types>
 		<members>*</members>
-		<name>EscalationRules</name>
+		<name>CustomField</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>EscalationRule</name>
 	</types>
 	<types>
 		<members>*</members>
@@ -58,15 +58,7 @@
 	</types>
 	<types>
 		<members>*</members>
-		<name>LightningExperienceTheme</name>
-	</types>
-	<types>
-		<members>*</members>
 		<name>PermissionSet</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>Profile</name>
 	</types>
 	<types>
 		<members>*</members>
@@ -78,15 +70,19 @@
 	</types>
 	<types>
 		<members>*</members>
-		<name>SharingRules</name>
-	</types>
-	<types>
-		<members>*</members>
 		<name>StaticResource</name>
 	</types>
 	<types>
 		<members>*</members>
 		<name>Workflow</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>RecordType</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ValidationRule</name>
 	</types>
 	<version>51.0</version>
 </Package>
