--- a/Project1VS/manifest/package.xml
+++ b/Project1VS/manifest/package.xml
@@ -49,6 +49,10 @@
 		<name>EscalationRule</name>
 	</types>
 	<types>
+		<members>Case</members>
+		<name>EscalationRules</name>
+	</types>
+	<types>
 		<members>*</members>
 		<name>GlobalValueSet</name>
 	</types>
@@ -58,7 +62,19 @@
 	</types>
 	<types>
 		<members>*</members>
+		<name>MatchingRule</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>MatchingRules</name>
+	</types>
+	<types>
+		<members>*</members>
 		<name>PermissionSet</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>Profile</name>
 	</types>
 	<types>
 		<members>*</members>
@@ -67,6 +83,10 @@
 	<types>
 		<members>*</members>
 		<name>Role</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>SharingRules</name>
 	</types>
 	<types>
 		<members>*</members>
