so that's where my gravel went

--- a/Project1VS/manifest/package.xml
+++ b/Project1VS/manifest/package.xml
@@ -41,7 +41,81 @@
 		<name>CustomObject</name>
 	</types>
 	<types>
-		<members>*</members>
+		<members>Account.Active__c</members>
+		<members>Account.CustomerPriority__c</members>
+		<members>Account.NumberofLocations__c</members>
+		<members>Account.SLAExpirationDate__c</members>
+		<members>Account.SLASerialNumber__c</members>
+		<members>Account.SLA__c</members>
+		<members>Account.UpsellOpportunity__c</members>
+		<members>Case.EngineeringReqNumber__c</members>
+		<members>Case.PotentialLiability__c</members>
+		<members>Case.Product__c</members>
+		<members>Case.SLAViolation__c</members>
+		<members>Character__c.Alignment__c</members>
+		<members>Character__c.Background__c</members>
+		<members>Character__c.Backstory__c</members>
+		<members>Character__c.Charisma__c</members>
+		<members>Character__c.Class__c</members>
+		<members>Character__c.Constitution__c</members>
+		<members>Character__c.Dead__c</members>
+		<members>Character__c.Dexterity__c</members>
+		<members>Character__c.Equipment__c</members>
+		<members>Character__c.Experiance__c</members>
+		<members>Character__c.Features_and_Traits__c</members>
+		<members>Character__c.General_Notes__c</members>
+		<members>Character__c.Hit_Points__c</members>
+		<members>Character__c.Intelligence__c</members>
+		<members>Character__c.Languages__c</members>
+		<members>Character__c.Level__c</members>
+		<members>Character__c.Party__c</members>
+		<members>Character__c.Personality__c</members>
+		<members>Character__c.Race__c</members>
+		<members>Character__c.Strength__c</members>
+		<members>Character__c.User__c</members>
+		<members>Character__c.Wisdom__c</members>
+		<members>Contact.Available_for_Online__c</members>
+		<members>Contact.Languages__c</members>
+		<members>Contact.Level__c</members>
+		<members>Contact.Region__c</members>
+		<members>DnDCampaign__c.Address__c</members>
+		<members>DnDCampaign__c.Campaign__c</members>
+		<members>DnDCampaign__c.Dungeon_Master__c</members>
+		<members>DnDCampaign__c.General_Notes__c</members>
+		<members>DnDCampaign__c.Next_Session__c</members>
+		<members>DnDCampaign__c.Party__c</members>
+		<members>DnDCampaign__c.Region__c</members>
+		<members>DnDCampaign__c.Status__c</members>
+		<members>DnDCampaign__c.Summary__c</members>
+		<members>DnDCampaign__c.URL__c</members>
+		<members>Goal.OrigGoalId__c</members>
+		<members>Lead.Available_for_Online__c</members>
+		<members>Lead.CurrentGenerators__c</members>
+		<members>Lead.NumberofLocations__c</members>
+		<members>Lead.Primary__c</members>
+		<members>Lead.ProductInterest__c</members>
+		<members>Lead.Region__c</members>
+		<members>Lead.SICCode__c</members>
+		<members>Metric.OrigMetricId__c</members>
+		<members>Opportunity.CurrentGenerators__c</members>
+		<members>Opportunity.DeliveryInstallationStatus__c</members>
+		<members>Opportunity.MainCompetitors__c</members>
+		<members>Opportunity.OrderNumber__c</members>
+		<members>Opportunity.TrackingNumber__c</members>
+		<members>Party__c.DM_Notes__c</members>
+		<members>Party__c.Region__c</members>
+		<members>Realm__c.Dungeon_King__c</members>
+		<members>Realm__c.Includes_States__c</members>
+		<members>Region__c.City__c</members>
+		<members>Region__c.Dungeon_Lord__c</members>
+		<members>Region__c.Realm__c</members>
+		<members>Region__c.States__c</members>
+		<members>Session__c.DnDCampaign__c</members>
+		<members>Session__c.Number__c</members>
+		<members>Session__c.Scheduled__c</members>
+		<members>Session__c.Status__c</members>
+		<members>Session__c.Summary__c</members>
+		<members>User.Programming_Languages__c</members>
 		<name>CustomField</name>
 	</types>
 	<types>
