added Campaign Name field to DnDCampaign, adjusted FLS for General Notes in DndCampaign

--- a/Project1VS/manifest/package.xml
+++ b/Project1VS/manifest/package.xml
@@ -59,6 +59,10 @@
 		<members>*</members>
 		<name>Role</name>
 	</types>
+		<types>
+		<members>*</members>
+		<name>Profile</name>
+	</types>
 	<types>
 		<members>*</members>
 		<name>StaticResource</name>
