Pricebook, Product, regionTrigger, regionTriggerHandler, regionTriggerTest

--- a/Project1VS/manifest/package.xml
+++ b/Project1VS/manifest/package.xml
@@ -32,6 +32,8 @@
 		<members>DnDCampaign__c</members>
 		<members>Lead</members>
 		<members>Party__c</members>
+		<members>Pricebook2</members>
+        <members>Product2</members>
 		<members>Realm__c</members>
 		<members>Region__c</members>
 		<members>Session__c</members>
