--- a/Project1VS/manifest/package.xml
+++ b/Project1VS/manifest/package.xml
@@ -94,6 +94,26 @@
 		<name>Profile</name>
 	</types>
 	<types>
+        <members>*</members>
+        <name>AssignmentRule</name>
+    </types>
+<types>
+        <members>*</members>
+        <name>AutoResponseRule</name>
+    </types>
+<types>
+        <members>*</members>
+        <name>EmailTemplate</name>
+    </types>
+<types>
+        <members>*</members>
+        <name>EscalationRule</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>EscalationRules</name>
+    </types>
+	<types>
 		<members>*</members>
 		<name>Queue</name>
 	</types>
