changed username to mine in queue and dashboard folder

--- a/Project1VS/manifest/package.xml
+++ b/Project1VS/manifest/package.xml
@@ -169,11 +169,25 @@
         <members>*</members>
 		<members>unfiled$public/Dungeon_Region_Report_kc5</members>
         <name>Report</name>
+	</types>
+	<types>
+        <members>unfiled$public/leads_over_time_gsO</members>
+        <name>Report</name>
+    </types>
     </types>
 	<types>
     <members>public</members>
     <members>Public_Dashboards/public</members>
     <name>Dashboard</name>
+	<types>
+        <members>PublicDashboards/information</members>
+        <name>Dashboard</name>
+    </types>
+	<types>
+        <members>PublicDashboards</members>
+        <members>PublicDashboards/information</members>
+        <name>Dashboard</name>
+    </types>
 </types>
 	<version>51.0</version>
 </Package>
